2016-02-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Provide generic stk_minimize_* functions

	* misc/optim/stk_minimize_boxconstrained.m: Generic
	stk_minimize_boxconstrained function, which accepts a char array
	as first input argument, and provides a generic documentation for
	all stk_minimize_boxconstrained methods.
	* misc/optim/stk_minimize_unconstrained.m: Same thing for
	stk_minimize_unconstrained methods.
	* admin/octpkg/INDEX: Add new functions to the index.

	Workaround for Octave bug #46350 (closes ticket #32)

	* admin/octpkg/patches/workaround-octave-bug-46350.patch: New
	patch that comments some unit tests out.
	* admin/octpkg/patches/series: Add new patch to the series.

	stk_optimscript.m: Fix %!shared blocks

	* iago/stk_optimscript.m: Fix %!shared blocks.

2016-02-02  Julien Bect  <julien.bect@centralesupelec.fr>

	Add some basic support for LOO cross-validation

	* core/@stk_model_gpposterior/stk_predict_leaveoneout.m: New
	function that computes LOO predictions and residuals. Currently
	implemented in a very basic manner (virtual-LOO formulas will be
	implemented later).
	* core/stk_predict_leaveoneout.m: Just a wrapper around the first
	one (very inefficient as it is, since we create a "posterior" that
	we don't really use... but we should).
	* misc/plot/stk_plot_predvsobs.m: New graphical function, to
	visualize predictions versus observations.
	* misc/plot/stk_plot_histnormres.m: New graphical function, to the
	distribution of normalized residuals.
	* examples/01_kriging_basics/stk_example_kb10.m: Example script.
	* stk_example_kb10.m: Add new functions to the index.

	stk_testfun_borehole.m: New test function

	* examples/test_functions/stk_testfun_borehole.m: New test
	function (the "borehole model" response function, from Harper &
	Gupta 1983).
	* admin/octpkg/INDEX: Add new function to the index (hidden for
	now, as the other stk_testfun_* functions, bug perhaps should we
	change that ?).
